--- a/src/notes/01base/01html/06.md
+++ b/src/notes/01base/01html/06.md
@@ -55,30 +55,116 @@ Hello World! My payload includes a trailing CRLF.
 
 :::snippet HTTP 请求方法
 
-| 消息 | 描述                                |
-| ---- | ----------------------------------- |
-| GET（查）  | 请求获取由 Request-URI 所标识的资源 |
-| POST（增）   | 请求服务器接收在请求中封装的实体，并将其作为由 Request-Line 中的 Request-URI 所标识的资源的一部分 |
-| PUT （改）  | 请求服务器存储一个资源，并用 Request-URI 作为其标识符 |
-| DELETE （删） | 请求服务器删除由 Request-URI 所标识的资源 |
-| HEAD | 请求获取由 Request-URI 所标识的资源的响应消息报头 |
-| TRACE | 请求服务器回送到的请求信息，主要用于测试或诊断 |
-| CONNECT | HTTP/1.1 协议中预留给能够将连接改为管道方式的代理服务器。 |
-| OPTIONS | 请求查询服务器的性能，或者查询与资源相关的选项和需求 |
-| PATCH | 是对 PUT 方法的补充，用来对已知资源进行局部更新 。 |
+| 消息          | 描述                                                                                              |
+| ------------- | ------------------------------------------------------------------------------------------------- |
+| GET（查）     | 请求获取由 Request-URI 所标识的资源                                                               |
+| POST（增）    | 请求服务器接收在请求中封装的实体，并将其作为由 Request-Line 中的 Request-URI 所标识的资源的一部分 |
+| PUT （改）    | 请求服务器存储一个资源，并用 Request-URI 作为其标识符                                             |
+| DELETE （删） | 请求服务器删除由 Request-URI 所标识的资源                                                         |
+| HEAD          | 请求获取由 Request-URI 所标识的资源的响应消息报头                                                 |
+| TRACE         | 请求服务器回送到的请求信息，主要用于测试或诊断                                                    |
+| CONNECT       | HTTP/1.1 协议中预留给能够将连接改为管道方式的代理服务器。                                         |
+| OPTIONS       | 请求查询服务器的性能，或者查询与资源相关的选项和需求                                              |
+| PATCH         | 是对 PUT 方法的补充，用来对已知资源进行局部更新 。                                                |
+
 :::
 
 :::snippet 比较 GET 与 POST
 
-| 属性 |GET |POST                                |
-| ---- | ---- | ----------------------------------- |
-| 后退按钮/刷新  |无害 |数据会被重新提交（浏览器应该告知用户数据会被重新提交）。 |
-| 书签  |可收藏为书签 |不可收藏为书签 |
-| 缓存  |能被缓存 |不能缓存 |
-| 编码类型  |application/x-www-form-urlencoded |application/x-www-form-urlencoded or multipart/form-data |
-| 历史  |参数保留在浏览器历史中。 |参数不会保存在浏览器历史中。 |
-| 对数据长度的限制  |限制。最大长度是 2048 个字符。 |无限制。 |
-| 对数据类型的限制  |只允许 ASCII 字符。 |没有限制。也允许二进制数据。 |
-| 安全性  |安全性较差 |更安全 |
-| 可见性  |数据在 URL 中对所有人都是可见的。 |数据不会显示在 URL 中。 |
+| 属性             | GET                               | POST                                                     |
+| ---------------- | --------------------------------- | -------------------------------------------------------- |
+| 后退按钮/刷新    | 无害                              | 数据会被重新提交（浏览器应该告知用户数据会被重新提交）。 |
+| 书签             | 可收藏为书签                      | 不可收藏为书签                                           |
+| 缓存             | 能被缓存                          | 不能缓存                                                 |
+| 编码类型         | application/x-www-form-urlencoded | application/x-www-form-urlencoded or multipart/form-data |
+| 历史             | 参数保留在浏览器历史中。          | 参数不会保存在浏览器历史中。                             |
+| 对数据长度的限制 | 限制。最大长度是 2048 个字符。    | 无限制。                                                 |
+| 对数据类型的限制 | 只允许 ASCII 字符。               | 没有限制。也允许二进制数据。                             |
+| 安全性           | 安全性较差                        | 更安全                                                   |
+| 可见性           | 数据在 URL 中对所有人都是可见的。 | 数据不会显示在 URL 中。                                  |
+
+:::
+
+:::snippet 1xx:信息
+
+| 消息                   | 描述                                                                                   |
+| ---------------------- | -------------------------------------------------------------------------------------- |
+| 100 Continue           | 服务器仅接收到部分请求，但是一旦服务器并没有拒绝该请求，客户端应该继续发送其余的请求。 |
+| 101 SwitchingProtocols | 服务器转换协议：服务器将遵从客户的请求转换到另外一种协议。                             |
+| 103 Checkpoint         | 用于 PUT 或者 POST 请求恢复失败时的恢复请求建议。                                      |
+
+:::
+
+:::snippet 2xx:成功
+
+| 消息                              | 描述                                                                               |
+| --------------------------------- | ---------------------------------------------------------------------------------- |
+| 200 OK                            | 请求成功（这是对 HTTP 请求成功的标准应答。）                                       |
+| 201 Created                       | 请求被创建完成，同时新的资源被创建。                                               |
+| 202 Accepted                      | 供处理的请求已被接受，但是处理未完成。                                             |
+| 203 Non-Authoritative Information | 请求已经被成功处理，但是一些应答头可能不正确，因为使用的是其他文档的拷贝。         |
+| 204 No Content                    | 请求已经被成功处理，但是没有返回新文档。浏览器应该继续显示原来的文档。             |
+| 205 Reset Content                 | 请求已经被成功处理，但是没有返回新文档。返回此状态码的响应要求请求者重置文档视图。 |
+| 206 Partial Content               | 客户发送了一个带有 Range 头的 GET 请求，服务器完成了它。                           |
+
+:::
+
+:::snippet 3xx:重定向
+
+| 消息                   | 描述                                                                 |
+| ---------------------- | -------------------------------------------------------------------- |
+| 300 Multiple Choices   | 多重选择。链接列表。用户可以选择某链接到达目的地。最多允许五个地址。 |
+| 301 Moved Permanently  | 所请求的页面已经转移至新的 URL。                                     |
+| 302 Found              | 所请求的页面已经临时转移至新的 URL。                                 |
+| 303 SeeOther           | 所请求的页面可在别的 URL 下被找到。                                  |
+| 304 Not Modified       | 未按预期修改文档。对客户端有缓存情况下服务端的一种响应。             |
+| 305 Use Proxy          | 客户请求的文档应该通过 Location 头所指明的代理服务器提取。           |
+| 306 Switch Proxy       | 目前已不再使用，但是代码依然被保留。                                 |
+| 307 Temporary Redirect | 被请求的页面已经临时移至新的 URL。                                   |
+| 308 Resume Incomplete  | 用于 PUT 或者 POST 请求恢复失败时的恢复请求建议。                    |
+
+:::
+
+:::snippet 4xx:客户端错误
+
+| 消息                                | 描述                                                                               |
+| ----------------------------------- | ---------------------------------------------------------------------------------- |
+| 400 Bad Request                     | 因为语法错误，服务器未能理解请求。                                                 |
+| 401 Unauthorized                    | 合法请求，但对被请求页面的访问被禁止。客户端没有提供或者需要的身份验证或验证失败。 |
+| 402 Payment Required                | 此代码尚无法使用。为以后保留使用。                                                 |
+|                                     | 合法请求，但对被请求页面的访问被禁止。                                             |
+| 404 Not Found                       | 服务器无法找到被请求的页面。                                                       |
+| 405 Method Not Allowed              | 服请求中指定的方法不被允许。                                                       |
+| 406 Not Acceptable                  | 服务器生成的响应无法被客户端所接受。                                               |
+| 407 Proxy Authentication Required   | 用户必须首先使用代理服务器进行验证，这样请求才会被处理。                           |
+| 408 Request Timeout                 | 请求超出了服务器的等待时间。                                                       |
+| 409 Conflict                        | 由于冲突，请求无法被完成。                                                         |
+| 410 Gone                            | 被请求的页面不可用。                                                               |
+| 411 Length Required                 | "Content-Length"未被定义。如果无此内容，服务器不会接受请求。                       |
+| 412 Precondition Failed             | 请求中的前提条件被服务器评估为失败。                                               |
+| 413 Request Entity Too Large        | 由于所请求的实体太大，服务器不会接受请求。                                         |
+| 414 Request-URI Too Long            | 由于 URL 太长，服务器不会接受请求。带有很多参数的 GET 请求时，就会发生这种情况。   |
+| 415 Unsupported Media Type          | 由于媒介类型不被支持，服务器不会接受请求。                                         |
+| 416 Requested Range Not Satisfiable | 客户端请求部分文档，但是服务器不能提供被请求的部分。                               |
+| 417 Expectation Failed              | 服务器不能满足客户在请求中指定的请求头。                                           |
+
+:::
+
+:::snippet 5xx:服务器错误
+
+| 消息                                | 描述                                                                           |
+| ----------------------------------- | ------------------------------------------------------------------------------ |
+| 500 Internal Server Error           | 请求未完成。服务器遇到不可预知的情况。                                         |
+| 501 Not Implemented                 | 请求未完成。服务器不支持所请求的功能，或者服务器无法完成请求。                 |
+| 502 Bad Gateway                     | 请求未完成。服务器充当网关或者代理的角色时，从上游服务器收到一个无效的响应。   |
+| 503 Service Unavailable             | 服务器当前不可用（过载或者当机）。                                             |
+| 504 Gateway Timeout                 | 网关超时。服务器充当网关或者代理的角色时，未能从上游服务器收到一个及时的响应。 |
+| 505 HTTP Version Not Supported      | 服务器不支持请求中指明的 HTTP 协议版本。                                       |
+| 506 Variant Also Negotiates         | 表示服务器存在内部配置错误。                                                   |
+| 507 Insufficient Storage            | 表示服务器无法存储完成请求所必须的内容。                                       |
+| 508 Loop Detected                   | 服务器在处理请求时陷入死循环。                                                 |
+| 509 Bandwidth Limit Exceeded        | 表示服务器达到带宽限制。                                                       |
+| 510 Not Extended                    | 表示获取资源所需要的策略并没有没满足。。                                       |
+| 511 Network Authentication Required | 用户需要提供身份验证来获取网络访问入口。                                       |
+
 :::
