--- a/src/notes/03node/03npm/01.md
+++ b/src/notes/03node/03npm/01.md
@@ -139,7 +139,7 @@ $ npm list -g
 
 name：项目/模块名称，长度必须小于等于214个字符，不能以"."(点)或者"_"(下划线)开头，不能包含大写字母。
 version：项目版本。
-author：项目开发者，它的值是你在https://npmjs.org网站的有效账户名，遵循“账户名<邮件>”的规则，例如：zhangsan zhangsan@163.com。
+author：项目开发者，它的值是你在`https://npmjs.org`网站的有效账户名，遵循“账户名<邮件>”的规则，例如：zhangsan zhangsan@163.com。
 description：项目描述，是一个字符串。它可以帮助人们在使用npm search时找到这个包。
 keywords：项目关键字，是一个字符串数组。它可以帮助人们在使用npm search时找到这个包。
 private：是否私有，设置为 true 时，npm 拒绝发布。
