--- a/src/notes/03node/01node/01.md
+++ b/src/notes/03node/01node/01.md
@@ -35,7 +35,7 @@ node helloworld.js
 :::snippet REPL 命令
 
 Node 自带了交互式解释器，可以执行以下任务：
-读取 - 读取用户输入，解析输入了Javascript 数据结构并存储在内存中。
+读取 - 读取用户输入，解析输入了 Javascript 数据结构并存储在内存中。
 执行 - 执行输入的数据结构
 打印 - 输出结果
 循环 - 循环操作以上步骤直到用户两次按下 ctrl-c 按钮退出。
@@ -87,7 +87,7 @@ undefined
 >
 ```
 
-下划线(_)变量
+下划线(\_)变量
 
 ```bash
 $ node
@@ -119,5 +119,89 @@ tab 键 - 列出当前命令
 .clear - 退出多行表达式
 .save filename - 保存当前的 Node REPL 会话到指定文件
 .load filename - 载入当前 Node REPL 会话的文件内容。
+
+:::
+
+:::snippet Node.js 回调函数
+Node.js 异步编程的直接体现就是回调。
+异步编程依托于回调来实现，但不能说使用了回调后程序就异步化了。
+回调函数在完成任务后就会被调用，Node 使用了大量的回调函数，Node 所有 API 都支持回调函数。
+
+input.txt
+
+```txt
+$ npm install npm -g
+```
+
+阻塞代码实例
+
+```javascript
+var fs = require("fs");
+var data = fs.readFileSync("input.txt");
+console.log(data.toString());
+console.log("程序执行结束!");
+```
+
+执行结果
+
+```Result
+$ node main.js
+菜鸟教程官网地址：www.runoob.com
+程序执行结束!
+```
+
+非阻塞代码实例
+
+```javascript
+var fs = require("fs");
+fs.readFile("input.txt", function(err, data) {
+  if (err) return console.error(err);
+  console.log(data.toString());
+});
+console.log("程序执行结束!");
+```
+
+执行结果
+
+```Result
+$ node main.js
+程序执行结束!
+菜鸟教程官网地址：www.runoob.com
+```
+
+:::
+
+:::snippet Node.js 事件驱动程序
+
+```javascript
+// 引入 events 模块
+var events = require("events");
+// 创建 eventEmitter 对象
+var eventEmitter = new events.EventEmitter();
+// 创建事件处理程序
+var connectHandler = function connected() {
+  console.log("连接成功。");
+  // 触发 data_received 事件
+  eventEmitter.emit("data_received");
+};
+// 绑定 connection 事件处理程序
+eventEmitter.on("connection", connectHandler);
+// 使用匿名函数绑定 data_received 事件
+eventEmitter.on("data_received", function() {
+  console.log("数据接收成功。");
+});
+// 触发 connection 事件
+eventEmitter.emit("connection");
+console.log("程序执行完毕。");
+```
+
+执行结果
+
+```Result
+$ node main.js
+连接成功。
+数据接收成功。
+程序执行完毕。
+```
 
 :::
