--- a/src/notes/03node/01node/02.md
+++ b/src/notes/03node/01node/02.md
@@ -1,83 +1,136 @@
-:::snippet Node.js 回调函数
-Node.js 异步编程的直接体现就是回调。
-异步编程依托于回调来实现，但不能说使用了回调后程序就异步化了。
-回调函数在完成任务后就会被调用，Node 使用了大量的回调函数，Node 所有 API 都支持回调函数。
+:::snippet Node.js EventEmitter
 
-input.txt
-
-```txt
-$ npm install npm -g
-```
-
-阻塞代码实例
-
-```javascript
-var fs = require("fs");
-var data = fs.readFileSync("input.txt");
-console.log(data.toString());
-console.log("程序执行结束!");
-```
-
-执行结果
-
-```Result
-$ node main.js
-菜鸟教程官网地址：www.runoob.com
-程序执行结束!
-```
-
-非阻塞代码实例
-
-```javascript
-var fs = require("fs");
-fs.readFile("input.txt", function(err, data) {
-  if (err) return console.error(err);
-  console.log(data.toString());
-});
-console.log("程序执行结束!");
-```
-
-执行结果
-
-```Result
-$ node main.js
-程序执行结束!
-菜鸟教程官网地址：www.runoob.com
-```
-
-:::
-
-:::snippet Node.js 事件驱动程序
+events 模块只提供了一个对象： events.EventEmitter。EventEmitter 的核心就是事件触发与事件监听器功能的封装。
 
 ```javascript
 // 引入 events 模块
 var events = require("events");
 // 创建 eventEmitter 对象
 var eventEmitter = new events.EventEmitter();
-// 创建事件处理程序
-var connectHandler = function connected() {
-  console.log("连接成功。");
-  // 触发 data_received 事件
-  eventEmitter.emit("data_received");
-};
-// 绑定 connection 事件处理程序
-eventEmitter.on("connection", connectHandler);
-// 使用匿名函数绑定 data_received 事件
-eventEmitter.on("data_received", function() {
-  console.log("数据接收成功。");
+```
+
+案例
+
+```javascript
+var events = require("events");
+var emitter = new events.EventEmitter();
+emitter.on("someEvent", function(arg1, arg2) {
+  console.log("listener1", arg1, arg2);
 });
-// 触发 connection 事件
-eventEmitter.emit("connection");
-console.log("程序执行完毕。");
+emitter.on("someEvent", function(arg1, arg2) {
+  console.log("listener2", arg1, arg2);
+});
+emitter.emit("someEvent", "arg1 参数", "arg2 参数");
 ```
 
 执行结果
 
 ```Result
-$ node main.js
-连接成功。
-数据接收成功。
-程序执行完毕。
+listener1 arg1 参数 arg2 参数
+listener2 arg1 参数 arg2 参数
+```
+
+:::
+
+:::snippet 方法
+
+| 方法                                 | 描述                                                                              |
+| ------------------------------------ | --------------------------------------------------------------------------------- |
+| `addListener(event, listener)`       | 为指定事件添加一个监听器到监听器数组的尾部。                                      |
+| `on(event, listener)`                | 为指定事件注册一个监听器，接受一个字符串 event 和一个回调函数。                   |
+| `once(event, listener)`              | 为指定事件注册一个单次监听器，即 监听器最多只会触发一次，触发后立刻解除该监听器。 |
+| `removeListener(event, listener)`    | 移除指定事件的某个监听器，监听器必须是该事件已经注册过的监听器。                  |
+| `removeAllListeners([event])`        | 移除所有事件的所有监听器， 如果指定事件，则移除指定事件的所有监听器。             |
+| `setMaxListeners(n)`                 | 默认情况下， 监听器超过 10 个就会输出警告信息。 修改监听器的默认限制的数量。      |
+| `listeners(event)`                   | 返回指定事件的监听器数组。                                                        |
+| `emit(event, [arg1], [arg2], [...])` | 按监听器的顺序执行执行每个监听器，如果事件有注册监听返回 true，否则返回 false。   |
+
+| 类方法                          | 描述                       |
+| ------------------------------- | -------------------------- |
+| `listenerCount(emitter, event)` | 返回指定事件的监听器数量。 |
+
+| 方法             | 描述                                                                                              |
+| ---------------- | ------------------------------------------------------------------------------------------------- |
+| `newListener`    | event - 字符串，事件名称。listener - 处理事件函数。该事件在添加新监听器时被触发。                 |
+| `removeListener` | event - 字符串，事件名称。listener - 处理事件函数。从指定监听器数组中删除一个监听器。会修改索引。 |
+
+语法
+
+```javascript
+server.on("connection", function(stream) {
+  console.log("someone connected!");
+});
+
+server.once("connection", function(stream) {
+  console.log("Ah, we have our first user!");
+});
+
+var callback = function(stream) {
+  console.log("someone connected!");
+};
+server.on("connection", callback);
+// ...
+server.removeListener("connection", callback);
+
+events.EventEmitter.listenerCount(emitter, eventName); //已废弃，不推荐
+events.emitter.listenerCount(eventName); //推荐
+```
+
+:::
+
+:::snippet 方法案例
+
+```javascript
+var events = require("events");
+var eventEmitter = new events.EventEmitter();
+// 监听器 #1
+var listener1 = function listener1() {
+  console.log("监听器 listener1 执行。");
+};
+// 监听器 #2
+var listener2 = function listener2() {
+  console.log("监听器 listener2 执行。");
+};
+// 绑定 connection 事件，处理函数为 listener1
+eventEmitter.addListener("connection", listener1);
+// 绑定 connection 事件，处理函数为 listener2
+eventEmitter.on("connection", listener2);
+var eventListeners = eventEmitter.listenerCount("connection");
+console.log(eventListeners + " 个监听器监听连接事件。");
+// 处理 connection 事件
+eventEmitter.emit("connection");
+// 移除监绑定的 listener1 函数
+eventEmitter.removeListener("connection", listener1);
+console.log("listener1 不再受监听。");
+// 触发连接事件
+eventEmitter.emit("connection");
+eventListeners = eventEmitter.listenerCount("connection");
+console.log(eventListeners + " 个监听器监听连接事件。");
+console.log("程序执行完毕。");
+```
+
+:::
+
+:::snippet error 事件
+
+```javascript
+var events = require("events");
+var emitter = new events.EventEmitter();
+emitter.emit("error");
+```
+
+```Result
+throw e; // process.nextTick error, or 'error' event on first tick
+^
+Error: Uncaught, unspecified 'error' event.
+at EventEmitter.emit (events.js:50:15)
+at Object.<anonymous> (/home/byvoid/error.js:5:9)
+at Module._compile (module.js:441:26)
+at Object..js (module.js:459:10)
+at Module.load (module.js:348:31)
+at Function._load (module.js:308:12)
+at Array.0 (module.js:479:10)
+at EventEmitter._tickCallback (node.js:192:40)
 ```
 
 :::
