--- a/src/notes/03node/01node/03.md
+++ b/src/notes/03node/01node/03.md
@@ -1,11 +1,12 @@
 :::snippet Node.js Buffer(缓冲区)
 JavaScript 语言自身只有字符串数据类型，没有二进制数据类型。
-但在处理像TCP流或文件流时，必须使用到二进制数据。
-在 Node.js中，定义了一个 Buffer 类，该类用来创建一个专门存放二进制数据的缓存区。
+但在处理像 TCP 流或文件流时，必须使用到二进制数据。
+在 Node.js 中，定义了一个 Buffer 类，该类用来创建一个专门存放二进制数据的缓存区。
 :::
 
 :::snippet Buffer 与字符编码
 Node.js 目前支持的字符编码包括：
+
 1. ascii - 仅支持 7 位 ASCII 数据。如果设置去掉高位的话，这种编码是非常快的。
 2. utf8 - 多字节编码的 Unicode 字符。许多网页和其他文档格式都使用 UTF-8 。
 3. utf16le - 2 或 4 个字节，小字节序编码的 Unicode 字符。支持代理对（U+10000 至 U+10FFFF）。
@@ -16,15 +17,16 @@ Node.js 目前支持的字符编码包括：
 8. hex - 将每个字节编码为两个十六进制字符。
 
 ```javascript
-const buf = Buffer.from('runoob', 'ascii');
-console.log(buf.toString('hex'));// 输出 72756e6f6f62
-console.log(buf.toString('base64'));// 输出 cnVub29i
+const buf = Buffer.from("runoob", "ascii");
+console.log(buf.toString("hex")); // 输出 72756e6f6f62
+console.log(buf.toString("base64")); // 输出 cnVub29i
 ```
 
 :::
 
 :::snippet 创建 Buffer 类
 Node.js 目前支持的字符编码包括：
+
 1. Buffer.alloc(size[, fill[, encoding]])： 返回一个指定大小的 Buffer 实例，如果没有设置 fill，则默认填满 0
 2. Buffer.allocUnsafe(size)： 返回一个指定大小的 Buffer 实例，但是它不会被初始化，所以它可能包含敏感的数据
 3. Buffer.allocUnsafeSlow(size)
@@ -36,7 +38,7 @@ Node.js 目前支持的字符编码包括：
 ```javascript
 // 创建一个长度为 10、且用 0 填充的 Buffer。
 const buf1 = Buffer.alloc(10);
-// 创建一个长度为 10、且用 0x1 填充的 Buffer。 
+// 创建一个长度为 10、且用 0x1 填充的 Buffer。
 const buf2 = Buffer.alloc(10, 1);
 // 创建一个长度为 10、且未初始化的 Buffer。
 // 这个方法比调用 Buffer.alloc() 更快，
@@ -46,9 +48,9 @@ const buf3 = Buffer.allocUnsafe(10);
 // 创建一个包含 [0x1, 0x2, 0x3] 的 Buffer。
 const buf4 = Buffer.from([1, 2, 3]);
 // 创建一个包含 UTF-8 字节 [0x74, 0xc3, 0xa9, 0x73, 0x74] 的 Buffer。
-const buf5 = Buffer.from('tést');
+const buf5 = Buffer.from("tést");
 // 创建一个包含 Latin-1 字节 [0x74, 0xe9, 0x73, 0x74] 的 Buffer。
-const buf6 = Buffer.from('tést', 'latin1');
+const buf6 = Buffer.from("tést", "latin1");
 ```
 
 :::
@@ -62,7 +64,7 @@ buf.write(string[, offset[, length]][, encoding])
 ```javascript
 buf = Buffer.alloc(256);
 len = buf.write("www.runoob.com");
-console.log("写入字节数 : "+  len);//写入字节数 : 14
+console.log("写入字节数 : " + len); //写入字节数 : 14
 ```
 
 :::
@@ -71,20 +73,100 @@ console.log("写入字节数 : "+  len);//写入字节数 : 14
 
 ```javascript
 buf = Buffer.alloc(26);
-for (var i = 0 ; i < 26 ; i++) {
+for (var i = 0; i < 26; i++) {
   buf[i] = i + 97;
 }
-console.log( buf.toString('ascii'));       // 输出: abcdefghijklmnopqrstuvwxyz
-console.log( buf.toString('ascii',0,5));   //使用 'ascii' 编码, 并输出: abcde
-console.log( buf.toString('utf8',0,5));    // 使用 'utf8' 编码, 并输出: abcde
-console.log( buf.toString(undefined,0,5)); // 使用默认的 'utf8' 编码, 并输出: abcde
+console.log(buf.toString("ascii")); // 输出: abcdefghijklmnopqrstuvwxyz
+console.log(buf.toString("ascii", 0, 5)); //使用 'ascii' 编码, 并输出: abcde
+console.log(buf.toString("utf8", 0, 5)); // 使用 'utf8' 编码, 并输出: abcde
+console.log(buf.toString(undefined, 0, 5)); // 使用默认的 'utf8' 编码, 并输出: abcde
 ```
 
 ```javascript
-abcdefghijklmnopqrstuvwxyz
-abcde
-abcde
-abcde
+abcdefghijklmnopqrstuvwxyz;
+abcde;
+abcde;
+abcde;
+```
+
+:::
+
+:::snippet 将 Buffer 转换为 JSON 对象
+
+```javascript
+const buf = Buffer.from([0x1, 0x2, 0x3, 0x4, 0x5]);
+const json = JSON.stringify(buf);
+// 输出: {"type":"Buffer","data":[1,2,3,4,5]}
+console.log(json);
+const copy = JSON.parse(json, (key, value) => {
+  return value && value.type === "Buffer" ? Buffer.from(value.data) : value;
+});
+// 输出: <Buffer 01 02 03 04 05>
+console.log(copy);
+```
+
+:::
+:::snippet 缓冲区合并
+语法：`Buffer.concat(list[, totalLength])`
+
+```javascript
+var buffer1 = Buffer.from("菜鸟教程");
+var buffer2 = Buffer.from("www.runoob.com");
+var buffer3 = Buffer.concat([buffer1, buffer2]);
+console.log("buffer3 内容: " + buffer3.toString());
+```
+
+:::
+
+:::snippet 缓冲区比较
+语法：`buf.compare(otherBuffer);`
+
+> 等于 0 相同。大于 0 在之后，小于 0 在之前
+
+```javascript
+var buffer1 = Buffer.from("ABC");
+var buffer2 = Buffer.from("ABCD");
+var result = buffer1.compare(buffer2);
+if (result < 0) {
+  console.log(buffer1 + " 在 " + buffer2 + "之前");
+} else if (result == 0) {
+  console.log(buffer1 + " 与 " + buffer2 + "相同");
+} else {
+  console.log(buffer1 + " 在 " + buffer2 + "之后");
+}
+//输出结果ABC在ABCD之前
+```
+
+:::
+
+:::snippet 拷贝缓冲区
+语法：`buf.copy(targetBuffer[, targetStart[, sourceStart[, sourceEnd]]]);`
+
+1. targetBuffer - 要拷贝的 Buffer 对象。
+2. targetStart - 数字, 可选, 默认: 0
+3. sourceStart - 数字, 可选, 默认: 0
+4. sourceEnd - 数字, 可选, 默认: buffer.length
+
+```javascript
+var buf1 = Buffer.from("abcdefghijkl");
+var buf2 = Buffer.from("RUNOOB");
+//将 buf2 插入到 buf1 指定位置上
+buf2.copy(buf1, 2);
+console.log(buf1.toString());
+//输出结果abRUNOOBijkl
+```
+
+:::
+
+:::snippet 缓冲区裁剪
+语法：`buf.slice([start[, end]]);`
+
+```javascript
+var buffer1 = Buffer.from("runoob");
+// 剪切缓冲区
+var buffer2 = buffer1.slice(0, 2);
+console.log("buffer1 : " + buffer1.toString()); //buffer1 : runoob
+console.log("buffer2 : " + buffer2.toString()); //buffer2 : ru
 ```
 
 :::
