--- a/src/notes/03node/01node/05.md
+++ b/src/notes/03node/01node/05.md
@@ -49,3 +49,102 @@ hello.sayHello();
 
 >要暴露对象(类似class，包含了很多属性和方法)，就用 module.exports
 :::
+
+:::snippet Node.js 函数
+
+```javascript
+function say(word) {
+  console.log(word);
+}
+
+function execute(someFunction, value) {
+  someFunction(value);
+}
+
+execute(say, "Hello");
+```
+
+:::
+
+:::snippet 匿名函数
+
+```javascript
+function execute(someFunction, value) {
+  someFunction(value);
+}
+
+execute(function(word){ console.log(word) }, "Hello");
+```
+
+:::
+
+:::snippet 函数传递是如何让HTTP服务器工作的
+
+匿名函数
+
+```javascript
+var http = require("http");
+
+http.createServer(function(request, response) {
+  response.writeHead(200, {"Content-Type": "text/plain"});
+  response.write("Hello World");
+  response.end();
+}).listen(8888);
+```
+
+函数
+
+```javascript
+var http = require("http");
+
+function onRequest(request, response) {
+  response.writeHead(200, {"Content-Type": "text/plain"});
+  response.write("Hello World");
+  response.end();
+}
+
+http.createServer(onRequest).listen(8888);
+```
+
+:::
+
+:::snippet Node.js 路由
+
+route.js
+
+```javascript
+function route(pathname) {
+  console.log("About to route a request for " + pathname);
+}
+exports.route = route;
+```
+
+server.js
+
+```javascript
+var http = require("http");
+var url = require("url");
+function start(route) {
+  function onRequest(request, response) {
+    var pathname = url.parse(request.url).pathname;
+    console.log("Request for " + pathname + " received.");
+    route(pathname);
+    response.writeHead(200, {"Content-Type": "text/plain"});
+    response.write("Hello World");
+    response.end();
+  }
+  http.createServer(onRequest).listen(8888);
+  console.log("Server has started.");
+}
+exports.start = start;
+```
+
+index.js
+
+```javascript
+var server = require("./server");
+var router = require("./router");
+server.start(router.route);
+```
+
+:::
