--- a/src/notes/03node/01node/06.md
+++ b/src/notes/03node/01node/06.md
@@ -1,51 +1,234 @@
-:::snippet 创建模块 exports
+:::snippet 全局对象与全局变量
 
-hello.js 文件
+1. JavaScript 中有一个特殊的对象，称为全局对象（Global Object），它及其所有属性都可以在程序的任何地方访问，即全局变量。
+2. 在浏览器 JavaScript 中，通常 window 是全局对象，
+3. Node.js 中的全局对象是 global，所有全局变量（除了 global 本身以外）都是 global 对象的属性。
+
+> global 最根本的作用是作为全局变量的宿主。按照 ECMAScript 的定义，满足以下条 件的变量是全局变量：
+
+1. 在最外层定义的变量；
+2. 全局对象的属性；
+3. 隐式定义的变量（未定义直接赋值的变量）。
+
+> 不要使用 var 定义变量以避免引入全局变量，因为全局变量会污染命名空间，提高代码的耦合风险。
+> :::
+
+:::snippet 全局对象与全局变量实例
 
 ```javascript
-exports.world = function() {
-  console.log("Hello World");
-};
+// 输出全局变量 __filename 的值
+console.log("__filename :"+ __filename );
+// 输出全局变量 __dirname 的值
+console.log( "__dirname :"+ __dirname );
+
+function printHello(){
+   console.log( "Hello, World!");
+}
+//setTimeout(cb, ms) 全局函数在指定的毫秒(ms)数后执行指定函数(cb)。：setTimeout() 只执行一次指定函数。
+// 两秒后执行以上函数
+var t = setTimeout(printHello, 2000);
+//clearTimeout( t ) 全局函数用于停止一个之前通过 setTimeout() 创建的定时器。 参数 t 是通过 setTimeout() 函数创建的定时器。
+// 清除定时器
+clearTimeout(t);
+
+setInterval(cb, ms) 全局函数在指定的毫秒(ms)数后执行指定函数(cb)。
+// 两秒后执行以上函数
+setInterval(printHello, 2000);
+//console 用于提供控制台标准输出，它是由 Internet Explorer 的 JScript 引擎提供的调试工具，后来逐渐成为浏览器的实施标准。
+//process 是一个全局变量，即 global 对象的属性。用于描述当前Node.js 进程状态的对象，提供了一个与操作系统的简单接口。
 ```
-
-main.js 文件
-
-```javascript
-var hello = require("./hello");
-hello.world();
-```
-
->如果要对外暴露属性或方法，就用 exports
 
 :::
 
-:::snippet 创建模块 module.exports
+:::snippet console
 
-hello.js 文件
+| 方法                                      | 描述                                                                 |
+| ----------------------------------------- | -------------------------------------------------------------------- |
+| `console.log([data][, ...])`              | 向标准输出流打印字符并以换行符结束。                                 |
+| `console.info([data][, ...])`             | 该命令的作用是返回信息性消息                                         |
+| `console.error([data][, ...])`            | 输出警告消息。控制台出现有黄色的惊叹号。                             |
+| `console.warn([data][, ...])`             | 用来对一个对象进行检查（inspect），并以易于阅读和打印的格式显示。    |
+| `console.dir(obj[, options])`             | 输出时间，表示计时开始。                                             |
+| `console.time(label)`                     | 结束时间，表示计时结束。                                             |
+| `console.timeEnd(label)`                  | 当前执行的代码在堆栈中的调用路径，。                                 |
+| `console.assert(value[, message][, ...])` | 用于判断某个表达式或变量是否为真，两个参数，1 是表达式，2 是字符串。 |
 
 ```javascript
-//hello.js
-function Hello() {
-  var name;
-  this.setName = function(thyName) {
-    name = thyName;
-  };
+console.log("Hello log");
+console.info("Hello info");
+console.error("Hello error");
+console.log("Hello world");
+console.trace();
+console.info("程序开始执行：");
+var counter = 10;
+console.log("计数: %d", counter);
+console.time("获取数据");
+function printHello() {}
+setTimeout(printHello, 2000);
+console.timeEnd("获取数据");
+console.info("程序执行完毕。");
+```
+
+:::
+
+:::snippet process
+
+| 事件                | 描述                                                 |
+| ------------------- | ---------------------------------------------------- |
+| `exit`              | 当进程准备退出时触发。                               |
+| `cbeforeExit`       | 当 node 清空事件循环，并且没有其他安排时触发这个事件 |
+| `uncaughtException` | 当一个异常冒泡回到事件循环，触发这个事件。           |
+| `Signal`            | 当进程接收到信号时就触发。                           |
+
+```javascript
+process.on("exit", function(code) {
+  // 以下代码永远不会执行
+  setTimeout(function() {
+    console.log("该代码不会执行");
+  }, 0);
+  console.log("退出码为:", code);
+});
+console.log("程序执行结束");
+```
+
+```result
+程序执行结束
+退出码为: 0
+```
+
+:::
+
+:::snippet util.callbackify
+
+util.callbackify(original) 将 async 异步函数（或者一个返回值为 Promise 的函数）转换成遵循异常优先的回调风格的函数
+
+```javascript
+const util = require("util");
+async function fn() {
+  return "hello world";
+}
+const callbackFunction = util.callbackify(fn);
+callbackFunction((err, ret) => {
+  if (err) throw err;
+  console.log(ret);
+});
+```
+
+```javascript
+const util = require("util");
+function fn() {
+  return Promise.reject(null);
+}
+const callbackFunction = util.callbackify(fn);
+
+callbackFunction((err, ret) => {
+  // 当 Promise 被以 `null` 拒绝时，它被包装为 Error 并且原始值存储在 `reason` 中。
+  err && err.hasOwnProperty("reason") && err.reason === null; // true
+});
+```
+
+:::
+
+:::snippet util.inherits
+
+util.inherits(constructor, superConstructor) 是一个实现对象间原型继承的函数。
+
+```javascript
+var util = require("util");
+function Base() {
+  this.name = "base";
+  this.base = 1991;
   this.sayHello = function() {
-    console.log("Hello " + name);
+    console.log("Hello " + this.name);
   };
 }
-module.exports = Hello;
+Base.prototype.showName = function() {
+  console.log(this.name);
+};
+function Sub() {
+  this.name = "sub";
+}
+util.inherits(Sub, Base);
+var objBase = new Base();
+objBase.showName();
+objBase.sayHello();
+console.log(objBase);
+var objSub = new Sub();
+objSub.showName();
+//objSub.sayHello();
+console.log(objSub);
 ```
 
-main.js 文件
+```result
+base
+Hello base
+{ name: 'base', base: 1991, sayHello: [Function] }
+sub
+{ name: 'sub' }
+```
+
+:::
+:::snippet util.inspect
+
+util.inspect(object,[showHidden],[depth],[colors]) 是一个将任意对象转换 为字符串的方法，通常用于调试和错误输出
 
 ```javascript
-//main.js
-var Hello = require("./hello");
-hello = new Hello();
-hello.setName("BYVoid");
-hello.sayHello();
+var util = require("util");
+function Person() {
+  this.name = "byvoid";
+  this.toString = function() {
+    return this.name;
+  };
+}
+var obj = new Person();
+console.log(util.inspect(obj));
+console.log(util.inspect(obj, true));
 ```
 
->要暴露对象(类似class，包含了很多属性和方法)，就用 module.exports
+```result
+Person { name: 'byvoid', toString: [Function] }
+Person {
+  name: 'byvoid',
+  toString:
+   { [Function]
+     [length]: 0,
+     [name]: '',
+     [arguments]: null,
+     [caller]: null,
+     [prototype]: { [constructor]: [Circular] } } }
+```
+
+:::
+
+:::snippet util.isArray(object)
+
+```javascript
+var util = require("util");
+util.isArray([]); // true
+util.isArray(new Array()); // true
+util.isArray({}); // false
+```
+
+:::
+
+:::snippet util.isRegExp(object)
+
+```javascript
+var util = require("util");
+util.isRegExp(/some regexp/); // true
+util.isRegExp(new RegExp("another regexp")); // true
+util.isRegExp({}); // false
+```
+
+:::
+
+:::snippet util.isDate(object)
+
+```javascript
+var util = require("util");
+util.isDate(new Date()); // true
+util.isDate(Date()); // false (without 'new' returns a String)
+util.isDate({}); // false
+```
+
 :::
